--- a/deployments/003/envs/local-approval/application.yaml
+++ b/deployments/003/envs/local-approval/application.yaml
@@ -27,7 +27,7 @@ spec:
       imagePullPolicy: IfNotPresent
       memory: 100Mi
       ports:
-      - expose: true
+      - expose: false
         port: 80
         protocol: TCP
     type: webservice
